2007-10-07  Gary Burton <gary.burton@zen.co.uk>
	* src/PageView.py: sort column retains filter value, issue #507

2007-10-07  Don Allingham  <don@gramps-project.org>
	* src/gen/db/GrampsDbUtils/_Backup.py: use gen.db

2007-10-07  Don Allingham  <don@gramps-project.org>
	* src/gen/db/__init__.py: commit

2007-10-06  Don Allingham  <don@gramps-project.org>
	* various: creation of gen.db package

2007-10-06 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DataViews/_RelationView.py: don't crash on missing media ref
	* src/DisplayTabs/_GalleryTab.py: on missing media ref, notify to run check tool
	* src/plugins/Check.py: add code to remove missing media ref in person,
	family, event, place, source.

2007-10-06 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/plugins/Check.py: add remove empty objects.

2007-10-05  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/DisplayTabs/_GalleryTab.py (build_interface): Create custom cell
	renderer for better control.

2007-07-23  Johan Gonqvist <johan.gronqvist@gmail.com>
	* src/plugins/Calendar.py: first day of calendar is an option.

2007-10-05 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DisplayTabs/_GalleryTab.py: remove bug that leads to database corruption,
	if media is deleted in mediaview, remove media in all open gallery tabs

2007-10-05 James G. Sack <jgsack@san.rr.com>
	* src/GrampsDb/_GrampsDbBase.py:
	* src/GrampsDb/_GrampsGEDDB.py:
	* src/GrampsDb/_GrampsXMLDB.py:
	* src/GrampsDb/_GrampsInMemDB.py:
	* src/Bookmarks.py:
	issue #1261: creating bookmark does not lead to save of xml

2007-10-03  Brian Matherly <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0001238: Web report: sort references for 
	places and media (use remove case sensitive sort and use normalized strings 
	for each section)

2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_GrampsDbBase.py: copy bookmark list, don't reference